<?xml version="1.0" encoding="UTF-8"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.jkiss.dbeaver</groupId>
    <artifactId>dbeaver</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <properties>
        <dbeaver-version>7.0.5</dbeaver-version>
        <dbeaver-product>DBeaver</dbeaver-product>
        <tycho-version>1.7.0</tycho-version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.build.timestamp.format>yyyyMMddHHmm</maven.build.timestamp.format>

        <!-- DBeaver Maven dependencies (see product/localRepository for details) -->
        <local-p2-repo.url>https://dbeaver.io/eclipse-repo</local-p2-repo.url>
        <!-- Eclipse release 2020-03 -->
        <eclipse-p2-repo.url>https://download.eclipse.org/releases/2020-03/</eclipse-p2-repo.url>
<!--        <eclipse-p2-repo.url>https://download.eclipse.org/releases/2019-12/201911081000</eclipse-p2-repo.url>-->

        <!-- Orbit. From Photon because we need com.ibm.icu.base -->
        <!-- <orbit-p2-repo.url>http://download.eclipse.org/tools/orbit/downloads/drops/R20180330011457/repository</orbit-p2-repo.url> -->

        <key.storage.path>/etc/</key.storage.path>
        <tsa/>
    </properties>

    <modules>
        <module>bundles</module>
        <module>plugins</module>
        <module>features</module>
    </modules>

    <repositories>
        <repository>
            <id>local-contrib</id>
            <url>${local-p2-repo.url}</url>
            <layout>p2</layout>
        </repository>
        <repository>
            <id>eclipse-p2-repo</id>
            <url>${eclipse-p2-repo.url}</url>
            <layout>p2</layout>
        </repository>
    </repositories>

    <build>
        <sourceDirectory>${project.basedir}/src</sourceDirectory>
        <testSourceDirectory>${project.basedir}/tests</testSourceDirectory>
        <plugins>


            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>2.6</version>
                <configuration>
                    <resources>
                    </resources>
                </configuration>
            </plugin>

            <!-- Tycho build -->
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>target-platform-configuration</artifactId>
                <version>${tycho-version}</version>
                <configuration>
                    <environments>
                        <environment>
                            <os>win32</os>
                            <ws>win32</ws>
                            <arch>x86_64</arch>
                        </environment>
                        <environment>
                            <os>linux</os>
                            <ws>gtk</ws>
                            <arch>x86_64</arch>
                        </environment>
                        <environment>
                            <os>macosx</os>
                            <ws>cocoa</ws>
                            <arch>x86_64</arch>
                        </environment>
                    </environments>

                </configuration>

            </plugin>

            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-maven-plugin</artifactId>
                <version>${tycho-version}</version>
                <extensions>true</extensions>
            </plugin>

            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-compiler-plugin</artifactId>
                <version>${tycho-version}</version>
                <configuration>
                    <useProjectSettings>false</useProjectSettings>
                    <source>1.8</source>
                    <target>1.8</target>
                    <compilerArgument>-warn:+discouraged,forbidden</compilerArgument>
                </configuration>
            </plugin>

            <!-- Set Built-By info -->
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-packaging-plugin</artifactId>
                <version>${tycho-version}</version>
                <configuration>
                    <archive>
                        <manifestEntries>
                            <Built-By>dbeaver.io</Built-By>
                            <Created-By>dbeaver.io</Created-By>
                            <Build-Time>${maven.build.timestamp}</Build-Time>
                        </manifestEntries>
                        <addMavenDescriptor>false</addMavenDescriptor>
                    </archive>
                </configuration>
            </plugin>

            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.5.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
                <executions>
                    <execution>
                        <id>compiletests</id>
                        <phase>test-compile</phase>
                        <goals>
                            <goal>testCompile</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- Tests run -->

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.5</version>
                <executions>
                    <execution>
                        <id>test</id>
                        <phase>test</phase>
                        <configuration>
                            <includes>
                                <include>**/*Test.java</include>
                            </includes>
                        </configuration>
                        <goals>
                            <goal>test</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

        </plugins>

    </build>

    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-report-plugin</artifactId>
                <version>2.5</version>
            </plugin>
        </plugins>
    </reporting>

    <profiles>
        <!-- desktop build: includes UI components and products -->
        <profile>
            <id>desktop</id>
            <activation><property><name>!headless-platform</name></property></activation>
            <modules>
                <!-- Tests -->
                <module>test</module>

                <!-- Products -->
                <module>product/appstore</module>
                <module>product/standalone</module>
                <module>product/repositories</module>
            </modules>
        </profile>

        <!-- Profile for jars sign -->
        <profile>
            <id>sign-code</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-jarsigner-plugin</artifactId>
                        <version>1.4</version>
                        <configuration>
                            <keystore>${key.storage.path}/jar-sign.keystore</keystore>
                            <tsa>${tsa}</tsa>
                            <tsacert>dbeaver</tsacert>
                            <storepass>dbeaver</storepass>
                            <alias>dbeaver</alias>
                            <keypass>dbeaver</keypass>
                        </configuration>
                        <executions>
                            <execution>
                                <id>sign</id>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <!-- unit tests -->

    <dependencies>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-all</artifactId>
            <version>1.10.19</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
<!--
        <dependency>
          <groupId>org.powermock</groupId>
          <artifactId>powermock-api-mockito</artifactId>
          <version>1.6.6</version>
          <scope>test</scope>
        </dependency>
        <dependency>
          <groupId>org.powermock</groupId>
          <artifactId>powermock-module-junit4</artifactId>
          <version>1.6.6</version>
          <scope>test</scope>
        </dependency>
-->
    </dependencies>

</project>
